virtualservices/grafana-vs.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gateway-all
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
    - hosts:
        - '*'
      port:
        name: http
        number: 80
        protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: prometheus
spec:
  hosts:
  - "${DOMAIN_NAME}"
  gateways:
  - istio-system/gateway-all
  http:
  - route:
      - destination:
          host: grafana
          port:
            number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
  - "${DOMAIN_NAME_KIALI}"
  gateways:
  - istio-system/gateway-all
  http:
  - route:
      - destination:
          host: kiali
          port:
            number: 20001
